<?xml version="1.0"?>
<package format="2">
  <name>aruco_analyzer</name>
  <version>0.0.0</version>
  <description>The aruco_analyzer package</description>

  <maintainer email="michael.a.roessler@campus.tu-berlin.de">Michael Roessler</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/ROS4SPACE/aruco_analyzer</url>

  <author email="lennart.kryza@tu-berlin.de">Lennart Kryza</author>
  <author email="michael.a.roessler@campus.tu-berlin.de">Michael Roessler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python-pyquaternion-pip</depend>
  <depend>cv_bridge</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
